--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>hello takwa </h1>
+	<h1>hello new projet </h1>
 <script src="app.js"></script>
 
 </body>
